Fix image spacing by removing position absolute overlay
Remove img::before overlay and excessive margins that affected layout

--- a/assets/css/image-protection.css
+++ b/assets/css/image-protection.css
@@ -11,13 +11,6 @@ img {
   -moz-user-drag: none;
   -o-user-drag: none;
   user-drag: none;
-  pointer-events: auto;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-}
-
-/* Prevent context menu on images */
-img {
   -webkit-touch-callout: none;
 }
 
@@ -30,16 +23,4 @@ img {
   user-select: none !important;
   -webkit-user-drag: none !important;
   user-drag: none !important;
-  pointer-events: auto !important;
-}
-
-/* Add a transparent overlay on hover to prevent right-click on images */
-img::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
 }
